package flc.model;

public enum Day {
    SATURDAY,
    SUNDAY
}
